[package]
name = "rust-deno"
version = "0.1.0"
authors = ["Elio Rivero <hello@startfunction.com>"]
edition = "2018"
description = "Build WebAssembly from Rust and run it on Deno"
license = "GPL-3.0-or-later"
repository = "https://github.com/eliorivero/rust-deno"

[dependencies]
wasm-bindgen = "=0.2.61"

[lib]
crate-type =["cdylib"]

